# CRAN_AI

./: CRAN_AI_Final_AllContributions_v3.ipynb  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.ipynb_checkpoints/: CRAN_AI_Final_AllContributions_v3-checkpoint.ipynb
configs/: base.yaml  cf.yaml  channel.yaml  deploy.yaml  df.yaml  generalized.yaml  hardware.yaml  multi_objective.yaml  optimizer.yaml  risk.yaml  robust.yaml  safety.yaml  selector.yaml  visualization.yaml
cran/: __init__.py
cran/baselines/: __init__.py  bruteforce_cf.py  bruteforce_df.py
cran/data/: __init__.py  dataloaders.py  dataset.py  feature_builder.py  samplers.py
cran/deploy/: __init__.py  benchmark_latency.py  benchmark_throughput.py  device_report.py  export_onnx.py  export_torchscript.py  model_summary.py
cran/learning/: __init__.py  callbacks.py  checkpointing.py  logging_utils.py  losses.py  metrics.py  schedulers.py  steps.py  trainer.py
cran/physics/: __init__.py  channels.py  constraints.py  csi.py  energy.py  (+4 more)
experiments/: benchmark_latency.py  evaluate_baselines.py  evaluate_full_system.py  make_all_figures.py  sweep_channel_models.py  sweep_hardware_si.py  sweep_power_tau.py  sweep_snr.py  train_cf.py  train_df.py  train_generalized.py  train_selector.py
tests/: test_bruteforce_cf.py  test_bruteforce_df.py  test_constraints.py  test_csi_pairing.py  test_energy.py  test_hardware_si.py  test_outage.py  test_rates_cf.py  test_rates_df.py
visualization/: __init__.py  base_plot.py  energy_plots.py  outage_plots.py  qos_plots.py  rate_plots.py
(+49 files in other folders)
